# fast_api_openid

./: .gitignore  README.md  app_test.py  pyproject.toml
oidc_server/: auth.py  config.py  main.py
oidc_server/controllers/backoffice/: applications.py  login.py  users.py
oidc_server/models/: __init__.py  application.py  user.py
oidc_server/templates/: login.html
oidc_server/utils/: debugging.py
sso_server/: auth.py  config.py  database.py  main.py  routes.py
sso_server/controllers/backoffice/: __init__.py  applications.py  login.py  users.py  web_interface.py
sso_server/models/: application.py  user.py
sso_server/templates/: home.html  login.html  style.css
tests/: test_smartidentity.py
