[tool.poetry]
name = "smartidentity"
version = "0.1.0"
description = "Server di identità per l'autenticazione delle applicazioni interne"
authors = ["Radu Cebotari <r.cebotari@apptoyou.it>", "Emanuele Addis <e.addis@apptoyou.it>", "Florin Cotovanu <f.cotovanu@apptoyou.it>"]
readme = "README.md"
repository = "https://github.com/App-to-you/smartidentity-be"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.0"
loguru = "^0.6.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-slugify = "^6.1.1"
pydantic = {version = "1.8.2", extras = ["email", "secret"]}
odmantic = "^0.3.5"
passlib = "^1.7.4"
uvicorn = "^0.17.6"
jwt = "^1.3.1"
Jinja2 = "^3.1.0"
python-multipart = "^0.0.5"
mslib = "^0.1.2"

[tool.poetry.dev-dependencies]
bpython = "^0.22.1"
pytest = "^7.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


